modif runFx script